# JetSim

./: CMakeLists.txt  README.md
include/: MyStyle.h  cross_sec_func.h  draw_plots.h
macro/: calc_crossec.ipynb  draw_plots.cpp  get_pythiahists.ipynb
plots/: .gitignore
rootfiles/: .gitignore
src/: pp_settings.cmnd  pythia_pp.cpp
